@@ -1,3 +1,8 @@
+2015-11-08 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c: added IS_AOP_IMMEDIATE,
+	  (gencjneshort): applied modified part of patch 129, thanks Hubert Sack
+
 2015-11-08 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/string.c
